@@ -1,3 +1,7 @@
+Change log next version
+-----------------------
+* Fixed an OutOfMemory issue in PowerMockRunner (issue 346).
+
 Change log 1.4.10 (2011-08-23)
 ------------------------------
 * Added missing class, PowerMockTestCase, to testng full release jar (issue 327).
